--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 :root {
-    --color-1: #94A3B8;
-    --color-2: #CBD5E1;
-    --color-3: #E2E8F0;
-    --color-4: #F1F5F9;
+    --color-1: #FB923C;
+    --color-2: #FDBA74;
+    --color-3: #FED7AA;
+    --color-4: #FFF7ED;
+    --button-color: #93C5FD;
+    --padding: 30px 50px 30px 50px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -16,11 +18,12 @@ body {
     margin: 0;
     display: grid;
     grid-template-columns: 250px 1fr 1fr;
-    grid-template-rows: 80px 80px auto;
+    grid-template-rows: 100px 80px auto;
     grid-template-areas: 
     'header header header'
     'nav-bar nav-bar nav-bar'
     'card-section card-section card-section';
+    
 }
 
 
@@ -38,14 +41,13 @@ body {
     justify-content: space-between;
     flex-flow: row nowrap;
     align-items: center;
+    padding: var(--padding)
 }
 
 .logo-bar {
-    display: flex;
+    display: fixed;
     justify-content: flex-start;
-    align-items: center;
-    flex-flow: row nowrap;
-    font-size: 25px;
+    font-size: 30px;
     font-family: 'Oswald', sans-serif;
     padding: 20px;
 }
@@ -62,7 +64,7 @@ input#search {
     border: 0;
     padding: 0px 10px 0px 10px;
     border-radius: 50px;
-    width: 100%;
+    width: 30vw;
     flex-grow: 1;
 }
 
@@ -83,17 +85,22 @@ input#search {
     align-items: center;
     justify-content: space-between;
     background-color: var(--color-4);
+    padding: var(--padding);
 }
 
 .card-section {
     display: grid;
     grid-area: card-section;
+    grid-template-columns: repeat(4, 1fr);  
+    grid-gap: 30px;
+    justify-content: center;
+    padding: var(--padding);
 }
 
 .instruction-bar {
     font-size: 15px;
-    padding: 20px;
     width: 60vw;
+    
 }
 
 .button {
@@ -101,7 +108,7 @@ input#search {
 }
 
 button {
-    background-color: #FACC15;
+    background-color: var(--button-color);
     border: none;
     border-radius: 40px;
     height: 3rem;
@@ -188,3 +195,13 @@ input#pages {
     padding: 0px 10px 0px 10px;
 }
 
+
+.card {
+    background-color: white;
+    border-radius: 10px;
+    border-left: 8px solid var(--button-color);
+    padding: 20px;
+    display: grid;
+    grid-template-rows: auto;
+    box-shadow: 5px 4px 5px rgba(187, 187, 187, 0.2);
+  }
