--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --color-3: #FED7AA;
     --color-4: #FFF7ED;
     --button-color: #93C5FD;
-    --padding: 30px 50px 30px 50px;
+    --padding: 50px 140px 30px 140px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -49,6 +49,7 @@ body {
     font-size: 30px;
     font-family: 'Oswald', sans-serif;
     padding: 20px;
+    white-space: nowrap;
 }
 
 .search-bar {
@@ -206,7 +207,6 @@ input#pages {
     border-left: 8px solid var(--button-color);
     padding: 20px 50px 30px 50px;;
     grid-template-rows: auto;
-    overflow-block: ;
     box-shadow: 5px 4px 5px rgba(187, 187, 187, 0.2);
     justify-content: center;
     gap: 10px;
