--- a/style.css
+++ b/style.css
@@ -1,245 +1,260 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 :root {
-    --color-1: #FB923C;
-    --color-2: #FDBA74;
-    --color-3: #FED7AA;
-    --color-4: #FFF7ED;
-    --button-color: #93C5FD;
-    --padding: 30px 140px 30px 140px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --color-1: #fb923c;
+  --color-2: #fdba74;
+  --color-3: #fed7aa;
+  --color-4: #fff7ed;
+  --button-color: #93c5fd;
+  --padding: 30px 140px 30px 140px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    display: grid;
-    grid-template-columns: 250px 1fr 1fr;
-    grid-template-rows: 100px 80px auto;
-    grid-template-areas: 
+  margin: 0;
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  grid-template-rows: 100px 80px auto;
+  grid-template-areas:
     'header header header'
     'nav-bar nav-bar nav-bar'
     'card-section card-section card-section';
-    
 }
 
 .avatar {
-    height: 40px;
-    width: 40px;
-    border-radius: 100;
+  height: 40px;
+  width: 40px;
+  border-radius: 100;
 }
 
 .header {
-    grid-area: header;
-    background-color: var(--color-1);
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    flex-flow: row nowrap;
-    align-items: center;
-    padding: var(--padding)
+  grid-area: header;
+  background-color: var(--color-1);
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  flex-flow: row nowrap;
+  align-items: center;
+  padding: var(--padding);
 }
 
 .logo-bar {
-    display: fixed;
-    justify-content: flex-start;
-    font-size: 30px;
-    font-family: 'Oswald', sans-serif;
-    padding: 20px;
-    white-space: nowrap;
+  display: fixed;
+  justify-content: flex-start;
+  font-size: 30px;
+  font-family: 'Oswald', sans-serif;
+  padding: 20px;
+  white-space: nowrap;
 }
 
 .search-bar {
-    display: flex;
-    align-items: center;
-    gap: 30px;
-    padding-right: 30px;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  padding-right: 30px;
 }
 
-
 input#search {
-    border: 0;
-    padding: 0px 10px 0px 10px;
-    border-radius: 50px;
-    width: 30vw;
-    flex-grow: 1;
+  border: 0;
+  padding: 0px 10px 0px 10px;
+  border-radius: 50px;
+  width: 30vw;
+  flex-grow: 1;
 }
 
 .search-bar > form {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .log-in {
-    display:flex;
-    align-items: center;
-    gap: 15px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
 .nav-bar {
-    grid-area: nav-bar;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-between;
-    background-color: var(--color-4);
-    padding: var(--padding);
+  grid-area: nav-bar;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--color-4);
+  padding: var(--padding);
 }
 
 .card-section {
-    display: grid;
-    grid-area: card-section;
-    grid-template-columns: repeat(auto-fit, 250px);
-    grid-gap: 30px;
-    justify-content: start;
-    padding: var(--padding);
+  display: grid;
+  grid-area: card-section;
+  grid-template-columns: repeat(auto-fit, 250px);
+  grid-gap: 30px;
+  justify-content: start;
+  padding: var(--padding);
 }
 
 .instruction-bar {
-    font-size: 15px;
-    min-width: 60vw;
-    
+  font-size: 15px;
+  min-width: 60vw;
 }
 
 .button {
-    padding-right: 40px;
+  padding-right: 40px;
 }
 
 button {
-    background-color: var(--button-color);
-    border: none;
-    border-radius: 40px;
-    height: 3rem;
-    width: 10rem;
-    box-shadow: 4px 5px 2px rgba(187, 187, 187, 0.2);
-    font-size: 15px;
+  background-color: var(--button-color);
+  border: none;
+  border-radius: 40px;
+  height: 3rem;
+  width: 10rem;
+  box-shadow: 4px 5px 2px rgba(187, 187, 187, 0.2);
+  font-size: 15px;
 }
 
 button:hover {
-    cursor: pointer;
-    background-color: var(--color-2);
+  cursor: pointer;
+  background-color: var(--color-2);
 }
 
 button:active {
-    box-shadow: none;
-    transform: translateY(2px)
+  box-shadow: none;
+  transform: translateY(2px);
 }
 
 .avatar:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 svg:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .form-control {
-    background-color: var(--color-4);
-    width: 300px;
-    height: max-content;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%,-50%) scale(0.1);
-    border-radius: 10px;
-    padding: 20px 25px 35px 25px;
-    visibility: hidden;
-    transition: transform 0.4s, top 0.4s;
+  background-color: var(--color-4);
+  width: 300px;
+  height: max-content;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.1);
+  border-radius: 10px;
+  padding: 20px 25px 35px 25px;
+  visibility: hidden;
+  transition: transform 0.4s, top 0.4s;
 }
 
 .open-form {
-    display: block;
-    top: 50%;
-    transform: translate(-50%,-50%) scale(1);
-    visibility: visible;
-    z-index: 101;
+  display: block;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  visibility: visible;
+  z-index: 101;
 }
 
 .overlay {
-    display: none;
-    opacity: 0;
-    background: rgba(0, 0, 0, .5);
-    position: fixed;
-    top: 0; left: 0;
-    width: 100vw; height: 100vw;
-    z-index: 100;
+  display: none;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vw;
+  z-index: 100;
 }
 
-.open-overlay{
-    display: block;
-    opacity: 0.5;
-    background: rgba(0, 0, 0, .5);
-    position: fixed;
-    top: 0; left: 0;
-    width: 100vw; height: 100vw;
-    z-index: 1;
+.open-overlay {
+  display: block;
+  opacity: 0.5;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vw;
+  z-index: 1;
 }
 
 form.book {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    gap: 15px;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  gap: 15px;
 }
 
 .read {
-    display: grid;
-    grid-auto-flow: column;  
-    gap: 10px;
+  display: grid;
+  grid-auto-flow: column;
+  gap: 10px;
 }
 
 input#title,
 input#author,
 input#pages {
-    border:none;
-    width: 16rem;
-    height: 30px;
-    border-radius: 15px;
-    padding: 0px 10px 0px 10px;
+  border: none;
+  width: 16rem;
+  height: 30px;
+  border-radius: 15px;
+  padding: 0px 10px 0px 10px;
 }
 
-
 .card {
-    background-color: white;
-    border-radius: 10px;
-    padding: 20px 50px 30px 50px;;
-    grid-template-rows: auto;
-    box-shadow: 5px 4px 5px rgba(187, 187, 187, 0.2);
-    justify-content: center;
-    gap: 10px;
-    overflow-wrap: break-word;
-    display: grid;
-    grid-template-rows: 1fr;
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px 50px 30px 50px;
+  grid-template-rows: auto;
+  box-shadow: 5px 4px 5px rgba(187, 187, 187, 0.2);
+  justify-content: center;
+  gap: 10px;
+  overflow-wrap: break-word;
+  display: grid;
+  grid-template-rows: 1fr;
 }
 
 .card > button {
-    background-color: var(--button-color);
-    border: none;
-    border-radius: 40px;
-    width: 9rem;
-    height: 3rem;
-    box-shadow: 4px 5px 2px rgba(187, 187, 187, 0.2);
-    font-size: 15px;
-    margin-top: 10px;
+  background-color: var(--button-color);
+  border: none;
+  border-radius: 40px;
+  width: 9rem;
+  height: 3rem;
+  box-shadow: 4px 5px 2px rgba(187, 187, 187, 0.2);
+  font-size: 15px;
+  margin-top: 10px;
 }
 
 .card > p:first-child {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .search-input > button:first-child {
-    width: auto;
-    height: auto;
-    background-color: transparent;
-    box-shadow: none;
+  width: auto;
+  height: auto;
+  background-color: transparent;
+  box-shadow: none;
 }
 
 .button-read {
-    border-left: 8px solid var(--button-color);
+  border-left: 8px solid var(--button-color);
 }
 
 .button-unread {
-    border-left: 8px solid red;
+  border-left: 8px solid red;
+}
+
+.error {
+  display: none;
+  padding: 10px 10px 0px;
+  font-size: 12px;
+  color: red;
+}
+
+.active {
+  display: block;
+}
+
+input:invalid {
+  box-shadow: 0 0 5px 1px red;
 }
